3351
It is hard to pinpoint this regression because it took a windy path.  There are two key inflections.  It worked until r17556, and in r17557 started tripping an assertion in the typer:
{code}
Exception in thread "main" java.lang.AssertionError: assertion failed
	at scala.Predef$$.assert(Predef.scala:87)
	at scala.tools.nsc.typechecker.Typers$$Typer.adapt(Typers.scala:742)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3486)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedHigherKindedType(Typers.scala:3564)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$51.apply(Typers.scala:3164)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$51.apply(Typers.scala:3163)
{code}
Then after bouncing around a bit, in r18858 it would not compile:
{code}
/scala/trac/2994/a.scala:24: error: type arguments [s,z] do not conform to type a's type parameter bounds [s[_ <: Naturals.NAT] <: Naturals.NAT,z <: Naturals.NAT]
    type a[s[_ <: NAT] <: NAT, z <: NAT] = n#a[curry[m#a, s]#f, z]
                                             ^
one error found
{code}
In r18859 it became what is presumably the current crasher.
{code}
Exception in thread "main" java.lang.Error: no-symbol does not have owner
	at scala.tools.nsc.symtab.Symbols$$NoSymbol$$.owner(Symbols.scala:1870)
	at scala.tools.nsc.symtab.Types$$class.isHKSubType0(Types.scala:3746)
	at scala.tools.nsc.symtab.SymbolTable.isHKSubType0(SymbolTable.scala:13)
	at scala.tools.nsc.symtab.Types$$class.isSubType2(Types.scala:3798)
	at scala.tools.nsc.symtab.Types$$class.isSubType0(Types.scala:3782)
	at scala.tools.nsc.symtab.SymbolTable.isSubType0(SymbolTable.scala:13)
{code}
